[gd_scene load_steps=2 format=2]

[ext_resource path="res://common/Boot.gd" type="Script" id=1]

[node name="Boot" type="Node"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
alignment = 1

[node name="Menu" type="ItemList" parent="VBoxContainer"]
margin_top = 268.0
margin_right = 128.0
margin_bottom = 332.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 128, 64 )
items = [ "Server", null, false, "Remote Server", null, false, "Client", null, false ]
auto_height = true

[node name="IP" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 322.0
margin_right = 128.0
margin_bottom = 346.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/IP"]
margin_left = 10.0
margin_top = 5.0
margin_right = 27.0
margin_bottom = 19.0
text = "IP:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/IP"]
margin_left = 31.0
margin_right = 89.0
margin_bottom = 24.0
expand_to_text_length = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/IP"]
visible = false
margin_left = 93.0
margin_right = 117.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )

[node name="Port" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 336.0
margin_right = 128.0
margin_bottom = 360.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Port"]
margin_left = 4.0
margin_top = 5.0
margin_right = 34.0
margin_bottom = 19.0
text = "Port:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Port"]
margin_left = 38.0
margin_right = 96.0
margin_bottom = 24.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Port"]
visible = false
margin_left = 100.0
margin_right = 124.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )

[node name="Accept" type="ToolButton" parent="VBoxContainer"]
visible = false
margin_top = 323.0
margin_right = 128.0
margin_bottom = 345.0
text = "Accept"

[node name="Back" type="ToolButton" parent="VBoxContainer"]
visible = false
margin_top = 323.0
margin_right = 128.0
margin_bottom = 345.0
text = "Back"
[connection signal="item_selected" from="VBoxContainer/Menu" to="." method="_on_menu_item_selected"]
[connection signal="text_changed" from="VBoxContainer/IP/LineEdit" to="." method="_on_IP_changed"]
[connection signal="text_changed" from="VBoxContainer/Port/LineEdit" to="." method="_on_Port_changed"]
[connection signal="pressed" from="VBoxContainer/Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
